<resources>
    <string name="app_name">TaxiON</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="drivers_choice">Driver\'s Choice</string>
    <string name="driver">Водитель</string>
    <string name="user_choice">Выбор пользователя</string>
    <string name="passenger">Пассажир</string>
    <string name="passenger_choice">passenger choice</string>
    <string name="accept">Принять</string>
    <string name="refuse">Отказать</string>
    <string name="change_auction">Изменить Аукцион</string>
    <string name="change_trip">Изменить поездку</string>
    <string name="cancel_order">Отменить заказ</string>
    <string name="current_rate">Текущая ставка</string>
    <string name="starting_bid">Начальная ставка</string>
    <string name="add_money_to_price">Добавить к цене</string>
    <string name="participate">Участвовать</string>
    <string name="minus_money">Минус деньги</string>
    <string name="auction_number">Аукцион №</string>
    <string name="price">Цена</string>
    <string name="message">Сообщение</string>
    <string name="type">Тип:</string>
    <string name="auction">Аукцион</string>
    <string name="first">Первый</string>
    <string name="create">Создать</string>
    <string name="offer">Предложить</string>
</resources>