<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="presentation.fragments.UserChoiceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user_choice"
            android:scaleType="centerCrop"
            android:src="@drawable/passenger_and_driver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/ButtonPassenger"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="65dp"

            android:background="@drawable/inset"
            android:text="@string/passenger"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            app:backgroundTint="@color/color_button_user_choice"
            app:layout_constraintEnd_toEndOf="@+id/ButtonDriver"
            app:layout_constraintStart_toStartOf="@+id/ButtonDriver"
            app:layout_constraintTop_toBottomOf="@+id/ButtonDriver"
            tools:ignore="@string/passenger_choice" />

        <Button
            android:id="@+id/ButtonDriver"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:layout_marginTop="200dp"
            android:alpha="0.9"
            android:background="@drawable/inset"
            android:text="@string/driver"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            app:backgroundTint="@color/color_button_user_choice"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            tools:ignore="@string/drivers_choice" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

