<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="presentation.fragments.trip_fragment.PassengerTripFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInfoTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/adressFromTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    tools:text="Откуда" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <TextView
                    android:id="@+id/adressToTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="2dp"
                    tools:text="Куда" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textPass"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/passenger"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/passNametextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/textPass"
                app:layout_constraintStart_toStartOf="@+id/textPass"
                app:layout_constraintTop_toBottomOf="@+id/textPass"
                tools:text="Имя пассажира" />

            <Button
                android:id="@+id/changeTripButton"
                style="@style/textTranslucent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#4EEBE7E7"
                android:text="@string/change_trip"
                android:textAllCaps="false"
                android:textColor="#AF1A237E"
                android:textSize="12sp"
                app:cornerRadius="@dimen/CornerRadius20dp"
                app:layout_constraintBottom_toBottomOf="@+id/cancelTripButton"
                app:layout_constraintEnd_toStartOf="@+id/divider2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <Button
                android:id="@+id/cancelTripButton"
                style="@style/button_gray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#4EEBE7E7"
                android:text="@string/cancel_order"
                android:textColor="#C14941"
                app:cornerRadius="@dimen/CornerRadius20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/divider2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:alpha="0"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/PhotoPassengerImageView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/passNametextView"
                app:layout_constraintEnd_toStartOf="@+id/passNametextView"
                app:layout_constraintTop_toTopOf="@+id/textPass"
                app:shapeAppearanceOverlay="@style/circle"
                app:strokeColor="@color/black10"
                app:strokeWidth="1dp"
                tools:src="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInfoDriver"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardViewInfoTrip"
        app:layout_constraintStart_toStartOf="@+id/cardViewInfoTrip"
        app:layout_constraintTop_toBottomOf="@+id/cardViewInfoTrip">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewOffersDrivers"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>