<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="presentation.fragments.create_auction_fragment.CreateAuctionFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCreatAucti"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        style="@style/cardViewCornRadAndElev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/typeAuctionCardView"
                style="@style/cardViewCornRadAndElev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/typeTextView"
                        style="@style/textBoldForCardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/type"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/horizontalScrollView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <HorizontalScrollView
                        android:id="@+id/horizontalScrollView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:foregroundGravity="center"
                        app:layout_constraintBottom_toBottomOf="@+id/typeTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/typeTextView"
                        app:layout_constraintVertical_bias="0.482">

                        <com.google.android.material.chip.ChipGroup
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            app:singleLine="true"
                            app:singleSelection="true">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/auctionChip"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="4dp"
                                android:layout_marginBottom="8dp"
                                android:padding="5dp"
                                android:text="@string/auction"
                                android:textAlignment="center" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/firstChip"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="4dp"
                                android:layout_marginBottom="8dp"
                                android:padding="5dp"
                                android:text="@string/first"
                                android:textAlignment="center" />
                        </com.google.android.material.chip.ChipGroup>
                    </HorizontalScrollView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/cardViewCornRadAndElev"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/typeAuctionCardView"
                app:layout_constraintStart_toStartOf="@+id/typeAuctionCardView"
                app:layout_constraintTop_toBottomOf="@+id/typeAuctionCardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/createAuctionButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/create"
                        style="@style/button_rounded"
                        android:textAllCaps="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <EditText
                        android:id="@+id/streetTo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:ems="11"
                        android:hint="Введите конечную точку"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        app:layout_constraintEnd_toEndOf="@+id/streetFrom"
                        app:layout_constraintStart_toStartOf="@+id/streetFrom"
                        app:layout_constraintTop_toBottomOf="@+id/streetFrom" />

                    <EditText
                        android:id="@+id/streetFrom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="4dp"
                        android:ems="11"
                        android:hint="Введите точку подачу"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        app:circularflow_radiusInDP="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewRendering"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@+id/createAuctionButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <EditText
                        android:id="@+id/initialBid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:hint="Начальная ставка(мах цена)"
                        android:inputType="text"
                        app:layout_constraintEnd_toEndOf="@+id/streetTo"
                        app:layout_constraintStart_toStartOf="@+id/streetTo"
                        app:layout_constraintTop_toBottomOf="@+id/streetTo" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="Время ставки"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@+id/timeAuction"
                        app:layout_constraintStart_toStartOf="@+id/initialBid"
                        app:layout_constraintTop_toBottomOf="@+id/initialBid" />

                    <EditText
                        android:id="@+id/timeAuction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:gravity="center"

                        android:hint="3 Мин"
                        app:layout_constraintEnd_toEndOf="@+id/initialBid"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/initialBid" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>